Squashed commit of the following:
commit 4a5379ebc4f3480e185e09ad0b008314ba5a3792
Author: maximthomas <maxim.thomas@gmail.com>
Date:   Mon Oct 4 10:43:34 2021 +0300

    add OTP authentication

commit b803ccaa590ef6dc3c2d555d1cb1022e1808b176
Author: maximthomas <maxim.thomas@gmail.com>
Date:   Tue Sep 21 10:10:58 2021 +0300

    create saved cookie doc draft

commit 100c33dcd0a6112a1f2fbbfa8326ffd3c65c8fec
Author: maximthomas <maxim.thomas@gmail.com>
Date:   Tue Sep 21 09:38:28 2021 +0300

    update swagger api

commit 5fbff7c937fd250b3a8721ed845d9ae1b0881b3d
Author: maximthomas <maxim.thomas@gmail.com>
Date:   Tue Sep 7 16:07:51 2021 +0300

    upgrade go modules

commit 5d741bfb22f4ebb921c50b82abc65731144b91c0
Author: maximthomas <maxim.thomas@gmail.com>
Date:   Tue Aug 10 11:24:12 2021 +0300

    callback types to constants

commit 74df517c08d74125a8ea6f5cb6a132e55ba9e7f8
Author: maximthomas <maxim.thomas@gmail.com>
Date:   Tue Aug 10 10:51:00 2021 +0300

    rename callbacks.CallbackRequest to callbacks.Request

commit d9d228a793d512db86e587a88e3ac4c5097e78e9
Author: maximthomas <maxim.thomas@gmail.com>
Date:   Sun Aug 8 13:02:46 2021 +0300

    server_test to auth controller

commit 661050f78b1323ccf120cade6c0be13f111036eb
Author: maximthomas <maxim.thomas@gmail.com>
Date:   Sun Aug 8 12:37:05 2021 +0300

    add auth controller tests

commit 4beca31daf413b50a6ce79358b5f0464aaa6e8d1
Author: maximthomas <maxim.thomas@gmail.com>
Date:   Sat Aug 7 07:43:28 2021 +0300

    add auth gin controller

commit 5b2f3ba5b0ec6687c9a58c2d1e65d114ef821667
Author: maximthomas <maxim.thomas@gmail.com>
Date:   Sat Aug 7 07:43:16 2021 +0300

    add auth gin controller

commit a5aac217d06b5faaff8acae9ed26e688297a51e9
Author: maximthomas <maxim.thomas@gmail.com>
Date:   Fri Aug 6 18:52:53 2021 +0300

    add todos

commit eb7a51d6682f4bacb427d8d1d8472195b2273686
Author: maximthomas <maxim.thomas@gmail.com>
Date:   Fri Aug 6 18:50:04 2021 +0300

    success auth flow test

commit
